lib/tests/fixtures/compiler/parser/next_in_function.baseline
Error: next_in_function.pp:3:9: next statement cannot be used inside a function statement.
  next
  ^~~~
