lib/tests/fixtures/compiler/parser/next_in_function.pp
function foo() {
    if true {
        next
    }
}
